--- a/inc/Makefile.in
+++ b/inc/Makefile.in
@@ -209,7 +209,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 AUTOMAKE_OPTIONS = foreign
-pkginclude_HEADERS = gzstdio.h gzio.h gzconfig.h
+pkginclude_HEADERS = gzinfo.h gzstdio.h gzio.h gzconfig.h
 BUILT_SOURCES = gzconfig.h
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_HEADERS = libgz.pc
