--- a/bin/Makefile.in
+++ b/bin/Makefile.in
@@ -525,9 +525,9 @@ uninstall-am: uninstall-binPROGRAMS
 # ---------------------------------------------------
 check:
 	objdump -T .libs/gzlib
-	./gzlib -l test.c
-	./gzlib -l test.c.gz
-	ls -l test.c test.c.gz
+	./gzlib -l $(srcdir)/test.c
+	./gzlib -l $(srcdir)/test.c.gz
+	ls -l $(srcdir)/test.c $(srcdir)/test.c.gz
 
 # ---------------------------------------------------
 .c.i :
